--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
+    "callapp-lib": "^3.5.1",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
