--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wand-redirect",
+  "name": "geekpie-mirrors-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,12 +13,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
-    "callapp-lib": "^3.5.1",
+    "axios": "^0.24.0",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "timeago.js": "^4.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
