--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@emotion/react": "latest",
@@ -19,11 +18,11 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.0.0",
+    "core-js": "3",
     "html-webpack-plugin": "^5.5.0",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "latest",
     "timeago.js": "^4.0.2",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
