--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@babel/preset-react": "^7.16.0",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
-    "@mui/material": "latest",
-    "axios": "^0.24.0",
+    "@mui/material": "^5.1.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.0.0",
@@ -22,7 +21,8 @@
     "html-webpack-plugin": "^5.5.0",
     "react": "latest",
     "react-dom": "latest",
-    "react-router-dom": "^5.3.0",
+    "react-query": "^3.32.1",
+    "react-router-dom": "^6.0.1",
     "timeago.js": "^4.0.2",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
