--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compression-webpack-plugin": "^9.0.0",
     "core-js": "3",
     "css-loader": "^6.5.1",
+    "framer-motion": "^5.3.2",
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.2.0",
     "markdown-it-prism": "^2.2.1",
