--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
+    "@mui/material": "^5.2.0",
     "@mui/styles": "^5.1.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
@@ -25,8 +25,8 @@
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.2.0",
     "markdown-it-prism": "^2.2.1",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.0.0-beta-c1220ebdd-20211123",
+    "react-dom": "^18.0.0-beta-c1220ebdd-20211123",
     "react-query": "^3.32.1",
     "react-router-dom": "^6.0.2",
     "style-loader": "^3.3.1",
