--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.2.0",
     "markdown-it-prism": "^2.2.1",
+    "nprogress": "^0.2.0",
     "react": "^18.0.0-beta-c1220ebdd-20211123",
     "react-dom": "^18.0.0-beta-c1220ebdd-20211123",
     "react-query": "^3.32.1",
