--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "build": "webpack --config ./config/webpack.prod.js"
   },
   "dependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/core": "^7.17.0",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.3.1",
+    "@mui/material": "^5.4.0",
     "@mui/styles": "^5.3.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.2.0",
-    "core-js": "3",
-    "css-loader": "^6.5.1",
+    "core-js": "3.21.0",
+    "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.3.2",
     "markdown-it-prism": "^2.2.2",
@@ -29,11 +29,12 @@
     "react-dom": "^18.0.0-rc.0",
     "react-query": "^3.34.12",
     "react-router-dom": "^6.2.1",
+    "react-virtualized": "^9.22.3",
     "style-loader": "^3.3.1",
     "timeago.js": "^4.0.2",
-    "webpack": "^5.67.0",
+    "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3",
+    "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   }
 }
