--- a/src/assets/repository/debian/buster.template
+++ b/src/assets/repository/debian/buster.template
@@ -1,11 +1,11 @@
-deb {{ PROTOCOL }}://{{ URL }}/debian/ bullseye main contrib non-free
-# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ bullseye main contrib non-free
+deb {{ PROTOCOL }}://{{ URL }}/debian/ buster main contrib non-free
+# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ buster main contrib non-free
 
-deb {{ PROTOCOL }}://{{ URL }}/debian/ bullseye-updates main contrib non-free
-# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ bullseye-updates main contrib non-free
+deb {{ PROTOCOL }}://{{ URL }}/debian/ buster-updates main contrib non-free
+# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ buster-updates main contrib non-free
 
-deb {{ PROTOCOL }}://{{ URL }}/debian/ bullseye-backports main contrib non-free
-# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ bullseye-backports main contrib non-free
+deb {{ PROTOCOL }}://{{ URL }}/debian/ buster-backports main contrib non-free
+# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ buster-backports main contrib non-free
 
-deb {{ PROTOCOL }}://{{ URL }}/debian-security/ bullseye-security main contrib non-free
-# deb-src {{ PROTOCOL }}://{{ URL }}/debian-security/ bullseye-security main contrib non-free
+deb {{ PROTOCOL }}://{{ URL }}/debian-security/ buster-security main contrib non-free
+# deb-src {{ PROTOCOL }}://{{ URL }}/debian-security/ buster-security main contrib non-free
