--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "nprogress": "^0.2.0",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
-    "react-query": "^3.34.12",
+    "react-query": "^3.34.13",
     "react-router-dom": "^6.2.1",
     "react-virtualized": "^9.22.3",
     "style-loader": "^3.3.1",
     "timeago.js": "^4.0.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
