New: Foolish scrollbar

--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "build": "webpack --config ./config/webpack.prod.js"
   },
   "dependencies": {
-    "@babel/core": "^7.17.0",
+    "@babel/core": "^7.17.2",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.0",
-    "@mui/styles": "^5.3.0",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
+    "@mui/styles": "^5.4.1",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.2.0",
@@ -26,8 +26,10 @@
     "markdown-it-prism": "^2.2.2",
     "nprogress": "^0.2.0",
     "react": "^18.0.0-rc.0",
+    "react-baron": "^3.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0-rc.0",
-    "react-query": "^3.34.13",
+    "react-query": "^3.34.14",
     "react-router-dom": "^6.2.1",
     "react-virtualized": "^9.22.3",
     "style-loader": "^3.3.1",
