Fix: Several style modification

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.2",
@@ -25,9 +25,10 @@
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.3.2",
     "markdown-it-prism": "^2.2.3",
-    "react": "^18.0.0-rc.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "react": "^18.0.0-rc.2",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.2",
     "react-query": "^3.34.15",
     "react-router-dom": "^6.2.1",
     "react-virtualized": "^9.22.3",
@@ -35,6 +36,7 @@
     "timeago.js": "^4.0.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.69.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
