Fix: Smaller bundle size
Fix: Bugs

--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,29 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-	  "corejs": "3",
-      "useBuiltIns": "usage",
-      "modules": false,
-      "targets": {
-        "browsers": "last 2 versions"
+    [
+      "@babel/preset-env",
+      {
+        "corejs": "3",
+        "useBuiltIns": "usage",
+        "modules": false,
+        "targets": {
+          "browsers": "last 2 versions"
+        }
       }
-    }],
-	["@babel/preset-react", {
-	  "runtime": "automatic"
-	}]
+    ],
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime", {"helpers": false}]
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "helpers": false
+      }
+    ]
   ]
 }
-
