--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.2",
+    "@mui/material": "^5.4.3",
     "@mui/styles": "^5.4.2",
     "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.2.0",
+    "copy-webpack-plugin": "^10.2.4",
     "core-js": "3.21.1",
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
@@ -29,7 +30,7 @@
     "react": "^18.0.0-rc.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0-rc.2",
-    "react-query": "^3.34.15",
+    "react-query": "^3.34.16",
     "react-router-dom": "^6.2.1",
     "react-virtualized": "^9.22.3",
     "style-loader": "^3.3.1",
