--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-react": "^7.16.7",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.3",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@mui/styles": "^5.4.2",
@@ -23,6 +24,7 @@
     "copy-webpack-plugin": "^10.2.4",
     "core-js": "3.21.1",
     "css-loader": "^6.6.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.3.2",
     "markdown-it-prism": "^2.2.3",
@@ -35,7 +37,9 @@
     "react-virtualized": "^9.22.3",
     "style-loader": "^3.3.1",
     "timeago.js": "^4.0.2",
+    "typeface-roboto": "^1.1.13",
     "url-loader": "^4.1.1",
+    "webfontloader": "^1.6.28",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
