--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.3.2",
+    "markdown-it-pangu": "^1.0.2",
     "markdown-it-prism": "^2.2.3",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react": "^18.0.0-rc.2",
@@ -39,8 +40,7 @@
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "url-loader": "^4.1.1",
-    "webfontloader": "^1.6.28",
-    "webpack": "^5.69.1",
+    "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
