--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "@emotion/react": "^11.8.1",
+    "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.3",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.3",
-    "@mui/styles": "^5.4.2",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
+    "@mui/styles": "^5.5.1",
     "@svgr/webpack": "^6.2.1",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.4",
     "core-js": "3.21.1",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^12.3.2",
     "markdown-it-pangu": "^1.0.2",
     "markdown-it-prism": "^2.2.3",
     "progress-bar-webpack-plugin": "^2.1.0",
-    "react": "^18.0.0-rc.2",
+    "react": "^18.0.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^18.0.0-rc.2",
+    "react-dom": "^18.0.0",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.1",
     "react-virtualized": "^9.22.3",
