--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.3",
-    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.1",
     "@svgr/webpack": "^6.2.1",
@@ -29,18 +28,19 @@
     "markdown-it": "^12.3.2",
     "markdown-it-pangu": "^1.0.2",
     "markdown-it-prism": "^2.2.3",
+    "mdi-material-ui": "^7.2.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react": "^18.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0",
     "react-query": "^3.34.16",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.3.0",
     "react-virtualized": "^9.22.3",
     "style-loader": "^3.3.1",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "url-loader": "^4.1.1",
-    "webpack": "^5.70.0",
+    "webpack": "^5.71.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
