--- a/package.json
+++ b/package.json
@@ -1,49 +1,37 @@
 {
   "name": "shanghaitech-mirror-frontend",
-  "version": "1.0.0",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.dev.js",
-    "build": "webpack --config ./config/webpack.prod.js"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/roboto": "^4.5.7",
-    "@mui/material": "^5.8.6",
-    "@mui/styles": "^5.8.6",
+    "@mui/material": "^5.8.7",
+    "@mui/styles": "^5.8.7",
     "@svgr/webpack": "^6.2.1",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "compression-webpack-plugin": "^10.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "core-js": "3.23.3",
-    "css-loader": "^6.7.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "@vitejs/plugin-react": "^1.3.2",
+    "core-js": "3.23.4",
     "markdown-it": "^13.0.1",
     "markdown-it-pangu": "^1.0.2",
     "markdown-it-prism": "^2.2.4",
     "mdi-material-ui": "^7.4.0",
-    "progress-bar-webpack-plugin": "^2.1.0",
+    "prismjs": "^1.28.0",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-virtualized": "^9.22.3",
-    "style-loader": "^3.3.1",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.73.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
+    "vite": "^2.9.14",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-progress": "^0.0.3",
+    "vite-plugin-svgr": "^2.2.0"
   }
 }
