--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/roboto": "^4.5.7",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.8.7",
-    "@mui/styles": "^5.8.7",
+    "@mui/material": "^5.9.0",
+    "@mui/styles": "^5.9.0",
     "@svgr/webpack": "^6.2.1",
-    "@vitejs/plugin-react": "^1.3.2",
-    "core-js": "3.23.4",
+    "@vitejs/plugin-react": "^2.0.0",
+    "core-js": "3.23.5",
     "markdown-it": "^13.0.1",
     "markdown-it-pangu": "^1.0.2",
     "markdown-it-prism": "^2.2.4",
@@ -26,12 +26,13 @@
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.1",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-virtualized": "^9.22.3",
+    "terser": "^5.14.2",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
-    "vite": "^2.9.14",
+    "vite": "^3.0.0",
     "vite-plugin-banner": "^0.3.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
