--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "vite": "^3.0.0",
+    "vite-compression-plugin": "^0.0.4",
     "vite-plugin-banner": "^0.3.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
