Fix: Almost full PWA support test

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "shanghaitech-mirror-frontend",
-  "homepage": "https://mirrors.shanghaitech.edu.cn",
+  "short_name": "GOS Mirror",
+  "full_name": "Geekpie Open Source Mirror",
+  "description": "The frontend of the geekpie open source mirror",
+  "domain": "mirrors.shanghaitech.edu.cn",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,9 +16,10 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/roboto": "^4.5.7",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.9.0",
-    "@mui/styles": "^5.9.0",
-    "@svgr/webpack": "^6.2.1",
+    "@mui/material": "^5.9.1",
+    "@mui/styles": "^5.9.1",
+    "@svgr/webpack": "^6.3.0",
+    "@tanstack/react-query": "^4.0.8",
     "@vitejs/plugin-react": "^2.0.0",
     "core-js": "3.23.5",
     "markdown-it": "^13.0.1",
@@ -26,16 +30,14 @@
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-virtualized": "^9.22.3",
     "terser": "^5.14.2",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
-    "vite": "^3.0.0",
+    "vite": "^3.0.2",
     "vite-compression-plugin": "^0.0.4",
     "vite-plugin-banner": "^0.3.0",
-    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-progress": "^0.0.3",
     "vite-plugin-pwa": "^0.12.3",
