--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
 
 # production
 /dist
@@ -20,6 +15,7 @@
 .env.test.local
 .env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
