--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_PROTOCOL=https
-VITE_DOMAIN=mirrors.shanghaitech.edu.cn
-VITE_SUMMARY_PREFIX=/summary
-VITE_QUICKDOWNLOAD_PREFIX=/downloads
-VITE_EXPLORER_PREFIX=/api/v1
+MIRROR_API_PROTOCOL=https
+MIRROR_DOMAIN=mirrors.shanghaitech.edu.cn
+MIRROR_SUMMARY_PREFIX=/summary
+MIRROR_QUICKDOWNLOAD_PREFIX=/downloads
+MIRROR_EXPLORER_PREFIX=/api/v1
