--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "terser": "^5.15.0",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
+    "typescript": "^4.8.4",
     "vite": "^3.0.9",
     "vite-compression-plugin": "^0.0.4",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-progress": "^0.0.4",
     "vite-plugin-svgr": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
+    "@types/react-dom": "^18.0.6"
   }
 }
