--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,8 +14,13 @@
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@mui/material": "^5.10.3",
     "@mui/styles": "^5.10.3",
-    "@svgr/webpack": "^6.3.1",
     "@tanstack/react-query": "^4.2.3",
+    "@types/markdown-it": "^12.2.3",
+    "@types/pangu": "^4.0.0",
+    "@types/react": "^18.0.21",
+    "@types/react-custom-scrollbars": "^4.0.10",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-virtualized": "^9.21.21",
     "@vitejs/plugin-react": "^2.0.1",
     "markdown-it": "^13.0.1",
     "markdown-it-pangu": "^1.0.2",
@@ -30,10 +35,10 @@
     "terser": "^5.15.0",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
+    "typescript": "^4.8.4",
     "vite": "^3.0.9",
     "vite-compression-plugin": "^0.0.4",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-progress": "^0.0.4",
-    "vite-plugin-svgr": "^2.2.1"
+    "vite-plugin-progress": "^0.0.4"
   }
 }
