--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
-    "@types/react-dom": "^18.0.6"
+    "@types/node": "^18.8.1",
+    "@types/react-dom": "^18.0.6",
     "vite-plugin-progress": "^0.0.4"
   }
 }
