--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@mui/material": "^5.10.13",
     "@mui/styles": "^5.10.10",
-    "@tanstack/react-query": "^4.14.6",
+    "@tanstack/react-query": "^4.15.0",
     "@types/markdown-it": "^12.2.3",
     "@types/pangu": "^4.0.0",
     "@types/react": "^18.0.25",
@@ -31,7 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "lefthook": "^1.2.0",
     "markdown-it": "^13.0.1",
-    "markdown-it-pangu": "^1.0.2",
+    "markdown-it-pangu-ts": "^0.1.3",
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.6.0",
     "prismjs": "^1.29.0",
