Smaller bundle size

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MIRROR_API_PROTOCOL=https
 MIRROR_DOMAIN=mirrors.shanghaitech.edu.cn
-MIRROR_SUMMARY_PREFIX=/summary
-MIRROR_QUICKDOWNLOAD_PREFIX=/downloads
+MIRROR_SUMMARY=/summary
+MIRROR_QUICKDOWNLOAD=/downloads
 MIRROR_EXPLORER_PREFIX=/api/v2
