--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
-    "vite-compression-plugin": "^0.0.4",
+    "vite-plugin-compression2": "^0.2.0",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-progress": "^0.0.6"
   }
