--- a/package.json
+++ b/package.json
@@ -7,44 +7,47 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "postinstall": "patch-package --patch-dir src/patches"
   },
+  
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.10.17",
-    "@mui/styles": "^5.10.16",
-    "@tanstack/react-query": "^4.19.1",
+    "@mui/material": "^5.11.1",
+    "@mui/styles": "^5.11.1",
+    "@tanstack/react-query": "^4.20.4",
     "@types/markdown-it": "^12.2.3",
-    "@types/pangu": "^4.0.0",
     "@types/react": "^18.0.26",
     "@types/react-custom-scrollbars": "^4.0.10",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-dom": "^18.0.10",
     "@types/react-virtualized": "^9.21.21",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
-    "@vitejs/plugin-react": "^2.2.0",
-    "eslint": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "@vitejs/plugin-react-swc": "^3.0.1",
+    "autocorrect-node": "^2.5.5",
+    "eslint": "^8.30.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "lefthook": "^1.2.4",
+    "lefthook": "^1.2.6",
     "markdown-it": "^13.0.1",
-    "markdown-it-pangu-ts": "^0.1.3",
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.6.0",
+    "patch-package": "^6.5.0",
+    "postinstall-postinstall": "^2.1.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.5",
+    "react-router-dom": "^6.6.1",
     "react-virtualized": "^9.22.3",
     "terser": "^5.16.1",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.9.4",
-    "vite": "^3.2.5",
+    "vite": "^4.0.3",
     "vite-plugin-compression2": "^0.4.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-progress": "^0.0.6"
