--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,5 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "src/plugins/*"],
+  "include": ["vite.config.ts"]
 }
