--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-dom": "^18.0.11",
     "@types/react-virtualized": "^9.21.21",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "autocorrect-node": "^2.6.2",
-    "eslint": "^8.34.0",
+    "clsx": "^1.2.1",
+    "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "lefthook": "^1.3.0",
+    "lefthook": "^1.3.2",
     "markdown-it": "^13.0.1",
     "markdown-it-inline-comments": "^1.0.1",
     "markdown-it-prism": "^2.3.0",
@@ -42,7 +43,7 @@
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.8.2",
     "react-virtualized": "^9.22.3",
     "terser": "^5.16.5",
     "timeago.js": "^4.0.2",
