--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "postinstall": "patch-package --patch-dir src/patches",
     "autocorrect": "node src/tools/autocorrect src/**/*.md --verbose"
   },
   "dependencies": {
@@ -16,8 +15,8 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.11.10",
-    "@mui/styles": "^5.11.9",
+    "@mui/material": "^5.11.11",
+    "@mui/styles": "^5.11.11",
     "@tanstack/react-query": "^4.24.10",
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^18.0.28",
@@ -32,13 +31,12 @@
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "lefthook": "^1.3.2",
+    "glob": "^9.2.1",
+    "lefthook": "^1.3.3",
     "markdown-it": "^13.0.1",
     "markdown-it-inline-comments": "^1.0.1",
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.6.0",
-    "patch-package": "^6.5.1",
-    "postinstall-postinstall": "^2.1.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
@@ -53,5 +51,10 @@
     "vite-plugin-compression2": "^0.8.2",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-progress": "^0.0.6"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "react-virtualized@9.22.3": "src/patches/react-virtualized@9.22.3.patch"
+    }
   }
 }
