Ugly way to detect backend separation

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-MIRROR_API_PROTOCOL=https
-MIRROR_DOMAIN=mirrors.shanghaitech.edu.cn
+# Whether frontend and backend are separated
+MIRROR_BACKEND_SEPARATION=false
+
+# Address of APIs
 MIRROR_SUMMARY=/summary
 MIRROR_QUICKDOWNLOAD=/downloads
 MIRROR_EXPLORER_PREFIX=/api/v2
+
+# Only works when MIRROR_BACKEND_SEPARATION is true
+MIRROR_API_PROTOCOL=https
+MIRROR_DOMAIN=mirrors.shanghaitech.edu.cn
