--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,24 @@
-# dependencies
+# Dependencies
 /node_modules
 
-# production
+# Production
 /dist
 
 # IDEs and editors
 /.idea
 /.vscode
 
-# misc
+# Misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Vite local env
+*.local
