--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.13.7",
     "@mui/styles": "^5.13.7",
     "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-virtual": "3.0.0-beta.54",
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^18.2.14",
     "@types/react-custom-scrollbars": "^4.0.10",
