Migrate react-virtualized to react-virtual
Hacked entities.json to reduce bundle size

--- a/package.json
+++ b/package.json
@@ -15,47 +15,38 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.5",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.13.7",
-    "@mui/styles": "^5.13.7",
-    "@tanstack/react-query": "^4.29.19",
+    "@mui/material": "^5.14.0",
+    "@mui/styles": "^5.14.0",
+    "@tanstack/react-query": "^4.29.23",
     "@tanstack/react-virtual": "3.0.0-beta.54",
     "@types/markdown-it": "^12.2.3",
-    "@types/react": "^18.2.14",
-    "@types/react-custom-scrollbars": "^4.0.10",
-    "@types/react-dom": "^18.2.6",
-    "@types/react-virtualized": "^9.21.22",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autocorrect-node": "^2.6.2",
-    "clsx": "^1.2.1",
-    "eslint": "^8.44.0",
+    "clsx": "^2.0.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "glob": "^10.3.3",
-    "lefthook": "^1.4.3",
+    "lefthook": "^1.4.5",
     "markdown-it": "^13.0.1",
-    "markdown-it-inline-comments": "^1.0.1",
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.7.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "react-virtualized": "^9.22.5",
-    "terser": "^5.18.2",
+    "terser": "^5.19.0",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "typescript": "^5.1.6",
-    "vite": "^4.4.2",
-    "vite-plugin-compression2": "^0.10.1",
+    "vite": "^4.4.4",
+    "vite-plugin-compression2": "^0.10.2",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-progress": "^0.0.7"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "react-virtualized@9.22.5": "src/patches/react-virtualized@9.22.5.patch"
-    }
+    "vite-plugin-progress": "^0.0.7",
+    "vite-plugin-replace": "^0.1.1"
   }
 }
