--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,10 +2,14 @@ name: Docker Image CI
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - 'README.md'
+      - '.env'
+      - '.gitignore'
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     env:
       tag: ${{ secrets.CI_REGISTRY }}/geekpie/coursebench-backend:latest
     steps:
