--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "glob": "^10.3.6",
+    "javascript-time-ago": "^2.5.9",
     "lefthook": "^1.5.0",
     "markdown-it": "^13.0.1",
     "markdown-it-prism": "^2.3.0",
