--- a/package.json
+++ b/package.json
@@ -15,36 +15,35 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.14.10",
-    "@mui/styles": "^5.14.10",
-    "@tanstack/react-query": "^4.35.3",
-    "@tanstack/react-virtual": "3.0.0-beta.59",
-    "@types/markdown-it": "^13.0.1",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@mui/material": "^5.14.13",
+    "@mui/styles": "^5.14.13",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-virtual": "^3.0.0-beta.65",
+    "@types/markdown-it": "^13.0.2",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "autocorrect-node": "^2.8.4",
     "clsx": "^2.0.0",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "glob": "^10.3.6",
-    "javascript-time-ago": "^2.5.9",
-    "lefthook": "^1.5.0",
-    "markdown-it": "^13.0.1",
+    "glob": "^10.3.10",
+    "lefthook": "^1.5.2",
+    "markdown-it": "^13.0.2",
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.7.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "terser": "^5.20.0",
+    "terser": "^5.21.0",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
+    "vite": "^4.4.11",
     "vite-plugin-compression2": "^0.10.5",
     "vite-plugin-minify": "^1.5.2",
     "vite-plugin-progress": "^0.0.7",
