--- a/package.json
+++ b/package.json
@@ -8,45 +8,44 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "autocorrect": "node src/tools/autocorrect src/**/*.md --verbose"
+    "autocorrect": "node src/tools/autocorrect **/*.md --verbose"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.14.13",
-    "@mui/styles": "^5.14.13",
-    "@tanstack/react-query": "^4.36.1",
-    "@tanstack/react-virtual": "^3.0.0-beta.65",
-    "@types/markdown-it": "^13.0.2",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "@vitejs/plugin-react-swc": "^3.4.0",
+    "@mui/material": "^5.14.19",
+    "@mui/styles": "^5.14.19",
+    "@tanstack/react-query": "^5.12.2",
+    "@tanstack/react-virtual": "^3.0.0",
+    "@types/markdown-it": "^13.0.7",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autocorrect-node": "^2.8.4",
     "clsx": "^2.0.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "glob": "^10.3.10",
-    "lefthook": "^1.5.2",
+    "lefthook": "^1.5.5",
     "markdown-it": "^13.0.2",
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.7.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "terser": "^5.21.0",
+    "react-router-dom": "^6.20.1",
+    "terser": "^5.24.0",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11",
-    "vite-plugin-compression2": "^0.10.5",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.4",
+    "vite-plugin-compression2": "^0.11.0",
     "vite-plugin-minify": "^1.5.2",
-    "vite-plugin-progress": "^0.0.7",
     "vite-plugin-replace": "^0.1.1"
   }
 }
