Replace vite with farm

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 # Whether frontend and backend are separated
 MIRROR_BACKEND_SEPARATION=false
 
+# Only works when MIRROR_BACKEND_SEPARATION is true
+MIRROR_API_PROTOCOL=https
+MIRROR_DOMAIN=mirrors.shanghaitech.edu.cn
+FARM_DOMAIN=mirrors.shanghaitech.edu.cn
+
 # Address of APIs
 MIRROR_SUMMARY=/summary
 MIRROR_QUICKDOWNLOAD=/downloads
 MIRROR_EXPLORER_PREFIX=/api/v2
-
-# Only works when MIRROR_BACKEND_SEPARATION is true
-MIRROR_API_PROTOCOL=https
-MIRROR_DOMAIN=mirrors.shanghaitech.edu.cn
