--- a/package.json
+++ b/package.json
@@ -2,50 +2,56 @@
   "name": "shanghaitech-mirror-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "start": "farm start",
+    "build": "tsc && farm build",
+    "preview": "farm preview",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "autocorrect": "node src/tools/autocorrect **/*.md --verbose"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@honkhonk/vite-plugin-svgr": "^1.1.0",
-    "@mui/material": "^5.14.19",
-    "@mui/styles": "^5.14.19",
-    "@tanstack/react-query": "^5.12.2",
-    "@tanstack/react-virtual": "^3.0.0",
+    "@farmfe/cli": "^1.0.0",
+    "@farmfe/core": "^1.0.0",
+    "@farmfe/plugin-react": "^1.0.0",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/material": "^5.15.14",
+    "@mui/styles": "^5.15.14",
+    "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-virtual": "^3.2.0",
     "@types/markdown-it": "^13.0.7",
-    "@types/react": "^18.2.41",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autocorrect-node": "^2.8.4",
-    "clsx": "^2.0.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "autocorrect-node": "^2.9.0",
+    "clsx": "^2.1.0",
+    "core-js": "^3.36.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "glob": "^10.3.10",
-    "lefthook": "^1.5.5",
-    "markdown-it": "^13.0.2",
+    "lefthook": "^1.6.7",
+    "markdown-it": "^14.1.0",
     "markdown-it-prism": "^2.3.0",
-    "mdi-material-ui": "^7.7.0",
+    "mdi-material-ui": "^7.8.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "terser": "^5.24.0",
+    "react-refresh": "^0.14.0",
+    "react-router-dom": "^6.22.3",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "terser": "^5.30.0",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.4",
-    "vite-plugin-compression2": "^0.11.0",
-    "vite-plugin-minify": "^1.5.2",
-    "vite-plugin-replace": "^0.1.1"
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
