--- a/src/contents/repository/debian/sid.template
+++ b/src/contents/repository/debian/sid.template
@@ -1,2 +1,2 @@
-deb {{ PROTOCOL }}://{{ URL }}/debian/ sid main contrib non-free
-# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ sid main contrib non-free
+deb {{ PROTOCOL }}://{{ URL }}/debian/ sid main contrib non-free non-free-firmware
+# deb-src {{ PROTOCOL }}://{{ URL }}/debian/ sid main contrib non-free non-free-firmware
