--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,7 +3,7 @@ pre-commit:
   commands:
     tsc:
       run: node_modules/.bin/tsc
-    eslint:
-      run: node_modules/.bin/eslint src --fix
+    # eslint:
+      # run: node_modules/.bin/eslint src --fix
     autocorrect:
       run: node src/tools/autocorrect src/**/*.md
