--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@farmfe/core": "^1.1.2",
     "@farmfe/plugin-react": "^1.0.0",
     "@fontsource/roboto": "^5.0.13",
-    "@mui/material": "^5.15.15",
-    "@mui/styles": "^5.15.15",
-    "@tanstack/react-query": "^5.32.1",
+    "@mui/material": "next",
+    "@mui/styles": "^5.15.16",
+    "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-virtual": "^3.5.0",
-    "@types/markdown-it": "^14.0.1",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@types/markdown-it": "^14.1.1",
+    "@types/node": "^20.12.8",
+    "@types/react": "npm:types-react@beta",
+    "@types/react-dom": "npm:types-react-dom@beta",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "autocorrect-node": "^2.9.0",
@@ -40,8 +40,8 @@
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.8.0",
     "prismjs": "^1.29.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "beta",
+    "react-dom": "beta",
     "react-refresh": "^0.14.2",
     "react-router-dom": "^6.23.0",
     "timeago.js": "^4.0.2",
