--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "@fontsource/roboto": "^5.0.13",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@mui/material": "next",
@@ -22,36 +24,36 @@
     "@tanstack/react-virtual": "^3.5.0",
     "@types/markdown-it": "^14.1.1",
     "@types/node": "^20.12.12",
-    "@types/react": "npm:types-react@beta",
-    "@types/react-dom": "npm:types-react-dom@beta",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "autocorrect-node": "^2.9.2",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autocorrect-node": "^2.10.0",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "clsx": "^2.1.1",
     "core-js": "^3.37.1",
+    "eslint": "^9.3.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "glob": "^10.3.15",
+    "glob": "^10.3.16",
     "lefthook": "^1.6.12",
     "markdown-it": "^14.1.0",
     "markdown-it-prism": "^2.3.0",
     "mdi-material-ui": "^7.9.1",
     "prismjs": "^1.29.0",
-    "react": "beta",
-    "react-dom": "beta",
+    "react": "rc",
+    "react-dom": "rc",
     "react-refresh": "^0.14.2",
     "react-router-dom": "^6.23.1",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.10.0",
     "vite": "^5.0.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-minify": "^1.5.2",
     "vite-plugin-replace": "^0.1.1",
-    "vite-plugin-svgr": "^4.2.0",
-    "@eslint/compat": "^1.0.1",
-    "@eslint/js": "^9.3.0",
-    "eslint": "^9.3.0",
-    "eslint-plugin-react": "^7.34.1",
-    "typescript-eslint": "^7.9.0"
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
